# ftdi_mpsse_spi_serial_flash

./: CMakeLists.txt  README.md  readme.md
src/: CMakeLists.txt  dump_util.c  dump_util.cpp  dump_util.h  main.c  main.cpp
src/fmt/: CMakeLists.txt  sconscript_comp
src/mpsse/: CMakeLists.txt
src/mpsse/mingw-x86/: CMakeLists.txt
src/mpsse/msvc-x86/: CMakeLists.txt  ftd2xx.h
